--- a/nico/src/app/lista-gente/lista-gente.component.html
+++ b/nico/src/app/lista-gente/lista-gente.component.html
@@ -1,6 +1,16 @@
 
-<h1>STAR Wars Actores</h1>
+<h1>Personajes de Star Wars</h1>
 
-<ul>
+<!-- <ul>
   <li *ngFor="let gente of listaGente">{{gente.name}}</li>
 </ul>
+ -->
+<div class="contenedor">
+<mat-card class="example-card" *ngFor="let gente of listaGente">
+  <mat-card-header>
+    <mat-card-title>{{gente.name}}</mat-card-title>
+    <mat-card-subtitle>{{gente.birth_year}}</mat-card-subtitle>
+  </mat-card-header>
+  <img mat-card-image src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6c/Star_Wars_Logo.svg/1920px-Star_Wars_Logo.svg.png" >
+</mat-card>
+</div>
